# wpfixit

./: .env.example  .gitignore  AGENTS.md  HANDOFF.md  package-lock.json  package.json  render.yaml  vercel.json  vite.config.ts
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_identity_projects.py  0002_wordpress_audits.py  0003_jobs_subscriptions_usage.py  0004_google_search_console.py  0005_ga4.py  0006_crawls_add_crawl_analysis.py  0007_recommendations_add_recommendation_metadata.py  0008_wordpress_changes_add_wordpress_change_history.py  0009_preferences_add_user_preferences_and_branding.py  0010_ai_settings_add_ai_settings_and_company_profiles.py  0011_multi_ai_connections.py  0012_recommendation_prompt_version.py  0013_dataforseo_keyword_opportunities.py  0014_keyword_target_classification.py  0015_page_package_settings.py  0016_page_package_proposals.py  0017_managed_page_blueprints.py  0018_page_proposal_versions_and_handoffs.py  0019_outbound_wordpress_draft_jobs.py
backend/app/: __init__.py  main.py
backend/app/core/: alembic_url.py  config.py  crypto.py  database.py  security.py
backend/app/domains/: __init__.py
backend/scripts/: seed_demo.py
backend/tests/: __init__.py  test_background_database.py  test_health.py
backend/tests/audits/: __init__.py  test_engine.py
backend/tests/core/: test_alembic_url.py  test_production_security.py  test_security.py
backend/tests/crawls/: __init__.py  conftest.py  test_demo_provider.py  test_provider.py  test_routes.py  test_webhook.py
(+296 files in other folders)
