[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wp-fixpilot-api"
version = "0.1.0"
description = "WP FixPilot backend API and workers"
requires-python = ">=3.12,<3.15"
dependencies = [
  "alembic>=1.15,<2",
  "cryptography>=44,<46",
  "fastapi>=0.115,<1",
  "openai>=2.0,<3",
  "psycopg[binary]>=3.2,<4",
  "pyjwt[crypto]>=2.10,<3",
  "pydantic-settings>=2.7,<3",
  "requests>=2.32,<3",
  "sqlalchemy>=2.0,<3",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "httpx2>=2.4,<3",
  "pytest>=8.3,<9",
  "pytest-cov>=6,<7",
  "ruff>=0.9,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
